# universal-agents-team

./: .gitignore  CLAUDE.md  CONSTITUTION.md  README.md  framework.yaml  literature_review_swarm_aspects_MN.md  literature_review_swarm_diversity_QD.md  organization-evolution.md  pyproject.toml
core/: diversity.yaml  resource-awareness.yaml  self-assessment.yaml  self-governance.yaml
research/: agent-teams-vs-swarms-literature-review.md  creativity-in-multi-agent-systems.md  detailed-design-phase0.md  detailed-design-phase1.5.md  detailed-design-phase1.md  detailed-design-phase2.5.md  detailed-design-phase2.md  detailed-design-phase3.5.md  detailed-design-phase3.md  detailed-design-phase4.md  detailed-design-phase5.md  detailed-design-phase6.md  detailed-design-phase7.md  detailed-design-phase8.md  detailed-design-phase9.md  environment-awareness-pruning-literature-review.md  framework-design-unified-v1.0.md  framework-design-unified-v1.1.md  framework-design-universal-agents.md  framework-design-v0.2-addendum.md  framework-design-v0.3-research-integration.md  gap-organizational-self-evolution.md  multi-agent-orchestration-literature-review.md  phase-implementation-procedure.md  phase1.5-failure-modes.md  phase2-failure-modes.md  resource-awareness-literature-review.md  self-aware-ai-and-bootstrapping.md  self-evolving-agents-literature-review.md  skill-crystallization-and-llm-skills.md  swarm-intelligence-problem-discovery.md
roles/: capabilities.yaml  voice.yaml
tools/: audit-tree.sh  bootstrap.sh  constitution-check.sh  force-unlock.sh  resource-monitor.sh  (+3 more)
(+119 files in other folders)
